удалила статик, внесла правки по ревью_1

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-<!DOCTYPE html> <!-- Используется html 5 версии -->
-<html lang="ru"> <!-- Язык сайта - русский -->
+<!DOCTYPE html>
+<html lang="ru">
   <head>
   </head>
   <body>
@@ -32,11 +32,6 @@
         <!-- под последним постом нет линии -->
       </div>  
     </main>
-    
-    <!-- Использованы классы бустрапа: -->
-    <!-- border-top: создаёт тонкую линию сверху блока -->
-    <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
-    <!-- py-3: контент внутри размещается с отступом сверху и снизу -->         
     <footer class="border-top text-center py-3">
       {% include 'includes/footer.html' %} 
     </footer>
