--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -13,22 +13,19 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block title %}
-    <title>Последние обновления на сайте</title>
-    {% endblock %}
+    <title>{% block title %}Последние обновления на сайте{% endblock %}</title>
   </head>
   <body>       
     <header>
       {% include 'includes/header.html' %}
     </header>
     <main>
-        {% block content %}
       <div class="container">   
+        {% block content %}
        <!-- Содержимое страницы из index.htm сюда притянется я надеюсь -->
-      </div>  
         {% endblock %}
-    </main>
-    
+      </div>  
+    </main> 
     <footer>
       {% include 'includes/footer.html' %} 
     </footer>
