--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,48 +1,15 @@
 {% extends "base.html" %}
-<!DOCTYPE html>
-<html lang="ru">
-  <head>   
-    
-    {{ group.title }}
-    {% block header %}
-    <title>Записи сообщества Лев Толстой – зеркало русской революции.</title>
-    {{ group.title }}
-    {% endblock %}
-  </head>
-  <body>
-    <header>
-      {% include 'includes/header.html' %}
-    </header>
-    <main>
-     {% block content %}
-      <div class="container">
-        {% block title %}
-        <h1>Лев Толстой – зеркало русской революции.</h1>
-        {% endblock %}
-        <p>
-          {{ group.description }}
-        </p>
-        {% for post in posts %}
-        <article>
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d M Y" }}
-            </li>
-          </ul>      
-          <p>
-            {{ post.text|linebreaksbr }}
-          </p> 
-          {% if not forloop.last %}<hr>{% endif %}
-          {% endfor %}        
-        </article>
-        <!-- под последним постом нет линии -->
-      </div>  
-      {% endblock %}
-    </main>
-    <footer class="page-footer font-small blue border-top">
-        {% include 'includes/footer.html' %}  
-    </footer>
-  </body>
+{% block title %}Все записи сообщества: {{ group.title }}{% endblock %}
+{% block header %}{{ group.title }}{% endblock %}
+{% block content %}
+    <p>{{ group.description }}</p>
+    {% for post in posts %}
+    <h3>
+        Автор: {{ post.author.get_full_name }},
+        Дата публикации: {{ post.pub_date|date:"d M Y" }}
+    </h3>
+    <p>{{ post.text|linebreaksbr }}</p>
+    {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
+
+{% endblock %}
