--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
-{% block title %}Все записи сообщества: {{ group.title }}{% endblock %}
+{% block title %} Все записи сообщества: {{ group.title }}{% endblock %}
 {% block header %}{{ group.title }}{% endblock %}
 {% block content %}
-    <p>{{ group.description }}</p>
+    <br>
+    <h2>{{ group.description }}</h2>
+    <br>
     {% for post in posts %}
-    <h3>
+    <h4>
         Автор: {{ post.author.get_full_name }},
         Дата публикации: {{ post.pub_date|date:"d M Y" }}
-    </h3>
+    </h4>
     <p>{{ post.text|linebreaksbr }}</p>
     {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
