--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
-{% block title %}Последние обновления сообщества{{ group.title }}{% endblock %}
+{% block title %}Последние обновления сообществ{% endblock %}
 {% block header %}{{ group.title }}{% endblock %}
 {% block content %}
-    <p>{{ group.description }}</p>
+    <br>
+    <h2>Последние обновления сообществ</h2>
+    <br>
     {% for post in posts %}
-    <h3>
+    <h4>
         Автор: {{ post.author.get_full_name }},
         Дата публикации: {{ post.pub_date|date:"d M Y" }}
-    </h3>
+    </h4>
     <p>{{ post.text|linebreaksbr }}</p>
     {% if post.group %}
     <a href="{% url 'posts:group_list' post.group.slug %}">Смотреть все записи сообщества</a>
